--- a/notebooks/07_inference_demo.ipynb
+++ b/notebooks/07_inference_demo.ipynb
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -26,12 +26,23 @@
         "# Acceptance:\n",
         "# - All imports successful\n",
         "\n",
-        "# TODO: import libraries\n"
+        "# TODO: import libraries\n",
+        "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+        "import sys\n",
+        "import os\n",
+        "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
+        "from src.utils import eutils_get\n",
+        "import lxml.etree\n",
+        "import os\n",
+        "import logging\n",
+        "import pandas as pd\n",
+        "import torch\n",
+        "from pathlib import Path\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -40,7 +51,20 @@
         "# Acceptance:\n",
         "# - LABELS list with all 10 categories\n",
         "\n",
-        "# TODO: define LABELS\n"
+        "# TODO: define LABELS\n",
+        "LABELS = [\n",
+        "    'SystematicReview',  # 1. Systematic reviews\n",
+        "    'MetaAnalysis',      # 2. Meta-analyses (quantitative synthesis)\n",
+        "    'RCT',               # 3. Randomized Controlled Trials\n",
+        "    'ClinicalTrial',     # 4. Non-randomized clinical trials\n",
+        "    'Cohort',            # 5. Cohort studies (prospective/retrospective)\n",
+        "    'CaseControl',       # 6. Case-control studies\n",
+        "    'CaseReport',        # 7. Case reports / case series\n",
+        "    'InVitro',           # 8. In vitro or ex vivo laboratory studies\n",
+        "    'Animal',            # 9. Animal studies\n",
+        "    'Human'              # 10. Human subjects (not mutually exclusive)\n",
+        "]\n",
+        "\n"
       ]
     },
     {
@@ -56,7 +80,135 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "33abfbdb399045289dc9e6b4af893232",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "config.json:   0%|          | 0.00/982 [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "a1d4891ac64a439fb9f3ed947f0ed371",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "model.safetensors:   0%|          | 0.00/268M [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "c3cdf3b6bb6d43f0b906a53ea60839b6",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "tokenizer_config.json: 0.00B [00:00, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "6b8493e219534ccb8623f18075239d66",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "vocab.txt: 0.00B [00:00, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "e0a9e79d01d84c739ac2d597189d20bd",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "tokenizer.json: 0.00B [00:00, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "5aa5ef5226be44ae81f2e8f5ac402344",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "special_tokens_map.json:   0%|          | 0.00/125 [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/plain": [
+              "DistilBertForSequenceClassification(\n",
+              "  (distilbert): DistilBertModel(\n",
+              "    (embeddings): Embeddings(\n",
+              "      (word_embeddings): Embedding(30522, 768, padding_idx=0)\n",
+              "      (position_embeddings): Embedding(512, 768)\n",
+              "      (LayerNorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+              "      (dropout): Dropout(p=0.1, inplace=False)\n",
+              "    )\n",
+              "    (transformer): Transformer(\n",
+              "      (layer): ModuleList(\n",
+              "        (0-5): 6 x TransformerBlock(\n",
+              "          (attention): DistilBertSdpaAttention(\n",
+              "            (dropout): Dropout(p=0.1, inplace=False)\n",
+              "            (q_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+              "            (k_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+              "            (v_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+              "            (out_lin): Linear(in_features=768, out_features=768, bias=True)\n",
+              "          )\n",
+              "          (sa_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+              "          (ffn): FFN(\n",
+              "            (dropout): Dropout(p=0.1, inplace=False)\n",
+              "            (lin1): Linear(in_features=768, out_features=3072, bias=True)\n",
+              "            (lin2): Linear(in_features=3072, out_features=768, bias=True)\n",
+              "            (activation): GELUActivation()\n",
+              "          )\n",
+              "          (output_layer_norm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+              "        )\n",
+              "      )\n",
+              "    )\n",
+              "  )\n",
+              "  (pre_classifier): Linear(in_features=768, out_features=768, bias=True)\n",
+              "  (classifier): Linear(in_features=768, out_features=10, bias=True)\n",
+              "  (dropout): Dropout(p=0.2, inplace=False)\n",
+              ")"
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# === TODO (you code this) ===\n",
         "# Goal: Load model and tokenizer from Hugging Face Hub (or local).\n",
@@ -67,7 +219,29 @@
         "# - tokenizer and model loaded\n",
         "# - Ready for inference\n",
         "\n",
-        "# TODO: load model\n"
+        "# TODO: load model\n",
+        "# Load from HF Hub (or use \"../artifacts/model/best\" for local)\n",
+        "hf_path = \"Tuminha/dental-evidence-triage\"\n",
+        "# Alternative: hf_path = \"../artifacts/model/best\"  # Use this if model not yet on HF\n",
+        "\n",
+        "tokenizer = AutoTokenizer.from_pretrained(hf_path)\n",
+        "model = AutoModelForSequenceClassification.from_pretrained(hf_path)\n",
+        "\n",
+        "# Use CPU for inference (more reliable than MPS for Hugging Face models)\n",
+        "# MPS can have issues with certain operations, CPU is more stable\n",
+        "device = torch.device(\"cpu\")\n",
+        "# Alternative: device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "# Note: MPS (Apple Silicon) can cause \"Placeholder storage\" errors, so we use CPU\n",
+        "\n",
+        "model = model.to(device)\n",
+        "\n",
+        "# Set to evaluation mode\n",
+        "model.eval()\n",
+        "\n",
+        "print(f\"✅ Model loaded from: {hf_path}\")\n",
+        "print(f\"✅ Device: {device} (using CPU for stability)\")\n",
+        "print(f\"✅ Model ready for inference\")\n",
+        "\n"
       ]
     },
     {
@@ -79,9 +253,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "('Loading protocols for single-implant crowns: a systematic review and meta-analysis.', 'To test whether or not immediate loading of single-implant crowns renders different results from early and conventional loading with respect to implant survival, marginal bone loss, stability of peri-implant soft tissue, esthetics, and patient satisfaction.')\n"
+          ]
+        }
+      ],
       "source": [
         "# === TODO (you code this) ===\n",
         "# Goal: Utility to fetch abstract from PubMed by PMID.\n",
@@ -94,9 +276,42 @@
         "# - Returns strings\n",
         "\n",
         "def fetch_abstract_by_pmid(pmid):\n",
-        "    \"\"\"Fetch abstract text from PubMed.\"\"\"\n",
-        "    # TODO\n",
-        "    raise NotImplementedError\n"
+        "    \"\"\"Fetch abstract text from PubMed by PMID.\"\"\"\n",
+        "    # Prepare parameters for efetch\n",
+        "    params = {\n",
+        "        'db': 'pubmed',\n",
+        "        'id': str(pmid),\n",
+        "        'retmode': 'xml',\n",
+        "        'rettype': 'medline'\n",
+        "    }\n",
+        "    \n",
+        "    # Call eutils_get - returns requests.Response object\n",
+        "    response = eutils_get('efetch.fcgi', params)\n",
+        "    \n",
+        "    # Parse XML from response text\n",
+        "    root = lxml.etree.fromstring(response.text.encode('utf-8'))\n",
+        "    \n",
+        "    # Extract title (handle None case)\n",
+        "    title_elem = root.find('.//ArticleTitle')\n",
+        "    title = title_elem.text if title_elem is not None and title_elem.text else \"\"\n",
+        "    \n",
+        "    # Extract abstract (handle None case and multiple AbstractText elements)\n",
+        "    abstract_elem = root.find('.//AbstractText')\n",
+        "    if abstract_elem is not None:\n",
+        "        # AbstractText can have text directly or nested elements\n",
+        "        if abstract_elem.text:\n",
+        "            abstract = abstract_elem.text\n",
+        "        else:\n",
+        "            # If no direct text, get all text content from nested elements\n",
+        "            abstract = ''.join(abstract_elem.itertext())\n",
+        "    else:\n",
+        "        abstract = \"\"\n",
+        "    \n",
+        "    return title, abstract\n",
+        "\n",
+        "# Test with a real PMID (remove test with fake PMID)\n",
+        "# Example: A real dental research paper\n",
+        "print(fetch_abstract_by_pmid(\"24660200\"))  "
       ]
     },
     {
@@ -112,7 +327,21 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'device' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 38\u001b[39m\n\u001b[32m     35\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m label_probs[:top_k]\n\u001b[32m     37\u001b[39m \u001b[38;5;66;03m# Test\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m38\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mTo test whether or not immediate loading of single-implant crowns renders different results from early and conventional loading with respect to implant survival, marginal bone loss, stability of peri-implant soft tissue, esthetics, and patient satisfaction.\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)    \n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 19\u001b[39m, in \u001b[36mpredict\u001b[39m\u001b[34m(text, top_k)\u001b[39m\n\u001b[32m     16\u001b[39m inputs = tokenizer(text, return_tensors=\u001b[33m\"\u001b[39m\u001b[33mpt\u001b[39m\u001b[33m\"\u001b[39m, truncation=\u001b[38;5;28;01mTrue\u001b[39;00m, max_length=\u001b[32m512\u001b[39m, padding=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m     18\u001b[39m \u001b[38;5;66;03m# Move inputs to same device as model (device is set in Cell 4)\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m19\u001b[39m inputs = \u001b[43m{\u001b[49m\u001b[43mk\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mv\u001b[49m\u001b[43m.\u001b[49m\u001b[43mto\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mk\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mv\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m.\u001b[49m\u001b[43mitems\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m}\u001b[49m\n\u001b[32m     21\u001b[39m \u001b[38;5;66;03m# Run through model\u001b[39;00m\n\u001b[32m     22\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m torch.no_grad():\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 19\u001b[39m, in \u001b[36m<dictcomp>\u001b[39m\u001b[34m(.0)\u001b[39m\n\u001b[32m     16\u001b[39m inputs = tokenizer(text, return_tensors=\u001b[33m\"\u001b[39m\u001b[33mpt\u001b[39m\u001b[33m\"\u001b[39m, truncation=\u001b[38;5;28;01mTrue\u001b[39;00m, max_length=\u001b[32m512\u001b[39m, padding=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m     18\u001b[39m \u001b[38;5;66;03m# Move inputs to same device as model (device is set in Cell 4)\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m19\u001b[39m inputs = {k: v.to(\u001b[43mdevice\u001b[49m) \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m inputs.items()}\n\u001b[32m     21\u001b[39m \u001b[38;5;66;03m# Run through model\u001b[39;00m\n\u001b[32m     22\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m torch.no_grad():\n",
+            "\u001b[31mNameError\u001b[39m: name 'device' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# === TODO (you code this) ===\n",
         "# Goal: Predict top-k labels for input text.\n",
@@ -125,8 +354,34 @@
         "\n",
         "def predict(text, top_k=5):\n",
         "    \"\"\"Predict study design labels for text.\"\"\"\n",
-        "    # TODO\n",
-        "    raise NotImplementedError\n"
+        "    # Truncate text to 2000 chars (same as training)\n",
+        "    text = str(text)[:2000]\n",
+        "    \n",
+        "    # Tokenize\n",
+        "    inputs = tokenizer(text, return_tensors=\"pt\", truncation=True, max_length=512, padding=True)\n",
+        "    \n",
+        "    # Get device from model (works even if device variable not in scope)\n",
+        "    device = next(model.parameters()).device\n",
+        "    inputs = {k: v.to(device) for k, v in inputs.items()}\n",
+        "    \n",
+        "    # Run through model\n",
+        "    with torch.no_grad():\n",
+        "        outputs = model(**inputs)\n",
+        "        logits = outputs.logits\n",
+        "    \n",
+        "    # Apply sigmoid to get probabilities\n",
+        "    probs = torch.sigmoid(logits)[0]  # Get first (and only) batch item\n",
+        "    \n",
+        "    # Create list of (label, probability) pairs\n",
+        "    label_probs = [(LABELS[i], float(probs[i])) for i in range(len(LABELS))]\n",
+        "    \n",
+        "    # Sort by probability (descending) and return top_k\n",
+        "    label_probs.sort(key=lambda x: x[1], reverse=True)\n",
+        "    \n",
+        "    return label_probs[:top_k]\n",
+        "\n",
+        "# Test\n",
+        "print(predict(\"To test whether or not immediate loading of single-implant crowns renders different results from early and conventional loading with respect to implant survival, marginal bone loss, stability of peri-implant soft tissue, esthetics, and patient satisfaction.\"))    \n"
       ]
     },
     {
@@ -224,8 +479,22 @@
     }
   ],
   "metadata": {
+    "kernelspec": {
+      "display_name": "Codecademy ML",
+      "language": "python",
+      "name": "codeacademy"
+    },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
